top left ez restyled

--- a/src/Utils/index.scss
+++ b/src/Utils/index.scss
@@ -12,3 +12,17 @@ a {
 .rightSide {
   margin-left: 200px;
 }
+
+.leftTitleEz {
+  position: absolute;
+  left: 50px;
+  top: -8px;
+  color: #2096f3;
+}
+
+.versionEz {
+  position: absolute;
+  left: 90px;
+  top: 15px;
+  color: red;
+}
